tests/parsing/smtlib/v2.7/errors/044_application_empty_args_1.smt2
(set-logic ALL)
(assert (foo _))
